fixed z-index

--- a/client/assets/less/custom/map.less
+++ b/client/assets/less/custom/map.less
@@ -20,7 +20,7 @@
     right: auto;
     left: 8px;
     top: 58px;
-    z-index: 2;
+    z-index: 1;
 
     @media @md-and-up {
       right: 12px;
